==> renesas/amazon-freertos/lib/ota/portable/renesas/rza2m-ebk/aws_ota_pal.c <==
#include <stdio.h>
#include <stdlib.h>
#include <string.h>
#include "FreeRTOS.h"
#include "aws_ota_pal.h"
#include "aws_ota_agent_internal.h"
#include "aws_pkcs11.h"
#include "aws_crypto.h"
#include "aws_ota_codesigner_certificate.h"
#include "aws_iot_ota_agent.h"
#include "iot_crypto.h"
#include "iot_pkcs11.h"
#include "aws_ota_codesigner_certificate.h"
#include "aws_ota_agent_config.h"
#include "croutine.h"
#include "task.h"
#include "semphr.h"
#include "queue.h"
#include "timers.h"
#include "event_groups.h"
#include "message_buffer.h"
#include "r_compiler_abstraction_api.h"
#include "iodefine.h"
#include "flash_api.h"
#define BOOT_LOADER_LOW_ADDRESS FLASH_CF_BLOCK_13
#define BOOT_LOADER_MIRROR_LOW_ADDRESS FLASH_CF_BLOCK_51
#define BOOT_LOADER_MIRROR_HIGH_ADDRESS FLASH_CF_BLOCK_38
#define BOOT_LOADER_UPDATE_TEMPORARY_AREA_HIGH_ADDRESS FLASH_CF_BLOCK_52
#define BOOT_LOADER_MIRROR_BLOCK_NUM_FOR_SMALL 8
#define BOOT_LOADER_MIRROR_BLOCK_NUM_FOR_MEDIUM 6
#define FLASH_INTERRUPT_PRIORITY configMAX_SYSCALL_INTERRUPT_PRIORITY	/* 0(low) - 15(high) */
#define BOOT_LOADER_UPDATE_TEMPORARY_AREA_LOW_ADDRESS 	(uint32_t)(0x20A00000)
#define BOOT_LOADER_UPDATE_EXECUTE_AREA_LOW_ADDRESS 	(uint32_t)(0x20200000)
#define BOOT_LOADER_UPDATE_TARGET_BLOCK_NUMBER (uint32_t)(FLASH_NUM_BLOCKS_CF - BOOT_LOADER_MIRROR_BLOCK_NUM_FOR_SMALL - BOOT_LOADER_MIRROR_BLOCK_NUM_FOR_MEDIUM)
#define BOOT_LOADER_USER_FIRMWARE_HEADER_LENGTH 0x200
#define BOOT_LOADER_USER_FIRMWARE_DESCRIPTOR_LENGTH 0x100

OTA_Err_t prvPAL_CreateFileForRx( OTA_FileContext_t * const C )
{
    DEFINE_OTA_METHOD_NAME( "prvPAL_CreateFileForRx" );
    OTA_LOG_L1("[%s] is called.\r\n", OTA_METHOD_NAME);
    OTA_LOG_L1("Compiled in [%s] [%s].\r\n", __DATE__, __TIME__);
    OTA_Err_t eResult = kOTA_Err_Uninitialized;

    if( C != NULL )
    {
        if( C->pucFilePath != NULL )
        {
			/* create task/queue/semaphore for flashing */
			xQueue = xQueueCreate(otaconfigMAX_NUM_BLOCKS_REQUEST, sizeof(PACKET_BLOCK_FOR_QUEUE));
			xTaskCreate(ota_flashing_task, "OTA_FLASHING_TASK", configMINIMAL_STACK_SIZE, NULL, configMAX_PRIORITIES, &xTask);
			xSemaphoreFlashig = xSemaphoreCreateBinary();
			xSemaphoreGive(xSemaphoreFlashig);
			xSemaphoreWriteBlock = xSemaphoreCreateMutex();
			xSemaphoreGive(xSemaphoreWriteBlock);
			fragmented_flash_block_list = NULL;

			load_firmware_control_block.OTA_FileContext = C;
			load_firmware_control_block.total_image_length = 0;
			load_firmware_control_block.eSavedAgentState = eOTA_ImageState_Unknown;
			C->pucFile = (uint8_t *)&load_firmware_control_block;
			eResult = kOTA_Err_None;
		}
        else
        {
            eResult = kOTA_Err_RxFileCreateFailed;
            OTA_LOG_L1( "[%s] ERROR - Invalid context provided.\r\n", OTA_METHOD_NAME );
        }
    }
    else
    {
        eResult = kOTA_Err_RxFileCreateFailed;
        OTA_LOG_L1( "[%s] ERROR - Invalid context provided.\r\n", OTA_METHOD_NAME );
    }

    return eResult;
}

OTA_Err_t prvPAL_Abort( OTA_FileContext_t * const C )
{
    DEFINE_OTA_METHOD_NAME( "prvPAL_Abort" );
    OTA_LOG_L1("[%s] is called.\r\n", OTA_METHOD_NAME);

    OTA_Err_t eResult = kOTA_Err_None;

    if( ota_context_validate(C) == R_OTA_ERR_INVALID_CONTEXT )
    {
        eResult = kOTA_Err_FileClose;
    }

	if (kOTA_Err_None == eResult)
	{
		/* delete task/queue for flashing */
		if (NULL != xTask)
		{
			vTaskDelete(xTask);
			xTask = NULL;
		}
		if (NULL != xQueue)
		{
			vQueueDelete(xQueue);
			xQueue = NULL;
		}
		if (NULL != xSemaphoreFlashig)
		{
			vSemaphoreDelete(xSemaphoreFlashig);
			xSemaphoreFlashig = NULL;
		}
		if (NULL != xSemaphoreWriteBlock)
		{
			vSemaphoreDelete(xSemaphoreWriteBlock);
			xSemaphoreWriteBlock = NULL;
		}
	}

	ota_context_close(C);
    return eResult;
}

int16_t prvPAL_WriteBlock( OTA_FileContext_t * const C,
                           uint32_t ulOffset,
                           uint8_t * const pacData,
                           uint32_t ulBlockSize )
{
    int16_t sNumBytesWritten = R_OTA_ERR_QUEUE_SEND_FAIL;
	FLASH_BLOCK flash_block;
	uint8_t *packet_buffer;

    DEFINE_OTA_METHOD_NAME( "prvPAL_WriteBlock" );
	OTA_LOG_L1("[%s] is called.\r\n", OTA_METHOD_NAME);

	xSemaphoreTake(xSemaphoreWriteBlock, portMAX_DELAY);

	packet_buffer = pvPortMalloc(ulBlockSize);
	memcpy(packet_buffer, pacData, ulBlockSize);
	packet_block_for_queue1.p_packet = packet_buffer;
	packet_block_for_queue1.ulOffset = ulOffset;
	packet_block_for_queue1.length = ulBlockSize;
	if(xQueueSend(xQueue, &packet_block_for_queue1, NULL) == pdPASS)
	{
		sNumBytesWritten = ( int16_t ) ulBlockSize;
	}
	else
	{
		vPortFree(packet_block_for_queue1.p_packet);
		OTA_LOG_L1("OTA flashing queue send error.\r\n");
		sNumBytesWritten = R_OTA_ERR_QUEUE_SEND_FAIL;
	}

	xSemaphoreGive(xSemaphoreWriteBlock);

	return sNumBytesWritten;
}

OTA_Err_t prvPAL_CloseFile( OTA_FileContext_t * const C )
{
	OTA_Err_t eResult = kOTA_Err_None;

    DEFINE_OTA_METHOD_NAME( "prvPAL_CloseFile" );

    if( ota_context_validate(C) == R_OTA_ERR_INVALID_CONTEXT )
    {
        eResult = kOTA_Err_FileClose;
    }

    if( C->pxSignature != NULL )
    {
		eResult = prvPAL_CheckFileSignature(C);
	}
	else
    {
        eResult = kOTA_Err_SignatureCheckFailed;
    }

	if (kOTA_Err_None == eResult)
	{
		/* Update the user firmware header. */
		if (ota_context_update_user_firmware_header(C) == R_OTA_ERR_NONE)
		{
			OTA_LOG_L1( "[%s] User firmware header updated.\r\n", OTA_METHOD_NAME );
		}
		else
		{
			OTA_LOG_L1( "[%s] ERROR: Failed to update the image header.\r\n", OTA_METHOD_NAME );
			eResult = kOTA_Err_FileClose;
		}
		/* delete task/queue for flashing */
		if (NULL != xTask)
		{
			vTaskDelete(xTask);
			xTask = NULL;
		}
		if (NULL != xQueue)
		{
			do
			{
				if (errQUEUE_FULL == xQueueReceive(xQueue, &packet_block_for_queue2, 0))
				{
					break;
				}
				else
				{
					vPortFree(packet_block_for_queue2.p_packet);
				}
			}
			while(1);
			vQueueDelete(xQueue);
			xQueue = NULL;
		}
		if (NULL != xSemaphoreFlashig)
		{
			vSemaphoreDelete(xSemaphoreFlashig);
			xSemaphoreFlashig = NULL;
		}
		if (NULL != xSemaphoreWriteBlock)
		{
			vSemaphoreDelete(xSemaphoreWriteBlock);
			xSemaphoreWriteBlock = NULL;
		}
	}
	else
	{
		load_firmware_control_block.eSavedAgentState = eOTA_ImageState_Rejected;
	}

	ota_context_close(C);
	return eResult;
}

static OTA_Err_t prvPAL_CheckFileSignature( OTA_FileContext_t * const C )
{
    DEFINE_OTA_METHOD_NAME( "prvPAL_CheckFileSignature" );

    OTA_Err_t eResult;
    uint32_t ulSignerCertSize;
    void * pvSigVerifyContext;
    uint8_t * pucSignerCert = NULL;
	uint32_t flash_aligned_address = 0;

    /* Verify an ECDSA-SHA256 signature. */
    if( CRYPTO_SignatureVerificationStart( &pvSigVerifyContext, cryptoASYMMETRIC_ALGORITHM_ECDSA,
                                           cryptoHASH_ALGORITHM_SHA256 ) == pdFALSE )
    {
        return kOTA_Err_SignatureCheckFailed;
    }
    else
    {
        OTA_LOG_L1( "[%s] Started %s signature verification, file: %s\r\n", OTA_METHOD_NAME,
                    cOTA_JSON_FileSignatureKey, ( const char * ) C->pucCertFilepath );
        pucSignerCert = prvPAL_ReadAndAssumeCertificate( C->pucCertFilepath, &ulSignerCertSize );

        if( pucSignerCert == NULL )
        {
            eResult = kOTA_Err_BadSignerCert;
        }
        else
        {
            CRYPTO_SignatureVerificationUpdate( pvSigVerifyContext,
                                                (const uint8_t*)hyper + BOOT_LOADER_USER_FIRMWARE_HEADER_LENGTH,
                                                load_firmware_control_block.total_image_length);

            if( CRYPTO_SignatureVerificationFinal( pvSigVerifyContext, ( char * ) pucSignerCert, ulSignerCertSize,
                                                   C->pxSignature->ucData, C->pxSignature->usSize ) == pdFALSE )
            {
                OTA_LOG_L1( "[%s] ERROR: Finished %s signature verification, but signature verification failed\r\n", OTA_METHOD_NAME,
                    cOTA_JSON_FileSignatureKey );
                eResult = kOTA_Err_SignatureCheckFailed;
            }
            else
            {
                OTA_LOG_L1( "[%s] PASS: Finished %s signature verification, signature verification passed\r\n", OTA_METHOD_NAME,
                    cOTA_JSON_FileSignatureKey );
                eResult = kOTA_Err_None;
            	image_size = load_firmware_control_block.total_image_length;
            }
        }
    }

    /* Free the signer certificate that we now own after prvPAL_ReadAndAssumeCertificate(). */
    if( pucSignerCert != NULL )
    {
        vPortFree( pucSignerCert );
    }

    return eResult;
}

static uint8_t * prvPAL_ReadAndAssumeCertificate( const uint8_t * const pucCertName,
                                                  uint32_t * const ulSignerCertSize )
{
    DEFINE_OTA_METHOD_NAME( "prvPAL_ReadAndAssumeCertificate" );

    uint8_t * pucCertData;
    uint32_t ulCertSize;
    uint8_t * pucSignerCert = NULL;
    CK_RV xResult;

    xResult = prvGetCertificate( ( const char * ) pucCertName, &pucSignerCert, ulSignerCertSize );

    if( ( xResult == CKR_OK ) && ( pucSignerCert != NULL ) )
    {
        OTA_LOG_L1( "[%s] Using cert with label: %s OK\r\n", OTA_METHOD_NAME, ( const char * ) pucCertName );
    }
    else
    {
        OTA_LOG_L1( "[%s] No such certificate file: %s. Using aws_ota_codesigner_certificate.h.\r\n", OTA_METHOD_NAME,
                    ( const char * ) pucCertName );

        /* Allocate memory for the signer certificate plus a terminating zero so we can copy it and return to the caller. */
        ulCertSize = sizeof( signingcredentialSIGNING_CERTIFICATE_PEM );
        pucSignerCert = pvPortMalloc( ulCertSize + 1 );                       /*lint !e9029 !e9079 !e838 malloc proto requires void*. */
        pucCertData = ( uint8_t * ) signingcredentialSIGNING_CERTIFICATE_PEM; /*lint !e9005 we don't modify the cert but it could be set by PKCS11 so it's not const. */

        if( pucSignerCert != NULL )
        {
            memcpy( pucSignerCert, pucCertData, ulCertSize );
            /* The crypto code requires the terminating zero to be part of the length so add 1 to the size. */
            pucSignerCert[ ulCertSize ] = 0U;
            *ulSignerCertSize = ulCertSize + 1U;
        }
        else
        {
            OTA_LOG_L1( "[%s] Error: No memory for certificate of size %d!\r\n", OTA_METHOD_NAME, ulCertSize );
        }
    }

    return pucSignerCert;
}

OTA_Err_t prvPAL_ResetDevice( void )
{
    DEFINE_OTA_METHOD_NAME("prvPAL_ResetDevice");
	int32_t fl_ret;	
   	uint8_t block[BOOT_LOADER_USER_FIRMWARE_HEADER_LENGTH + BOOT_LOADER_USER_FIRMWARE_DESCRIPTOR_LENGTH];	
	FIRMWARE_UPDATE_CONTROL_BLOCK * p_block_header;	
	uint32_t i = 0;	

    OTA_LOG_L1( "[%s] Resetting the device.\r\n", OTA_METHOD_NAME );

	/* erase temporary area */
	i=BOOT_LOADER_UPDATE_TEMPORARY_AREA_LOW_ADDRESS;
	while (i<BOOT_LOADER_UPDATE_TEMPORARY_AREA_LOW_ADDRESS + image_size + BOOT_LOADER_USER_FIRMWARE_HEADER_LENGTH)
	{
		flash_erase_sector(NULL,i);
		i += flash_get_sector_size(NULL,i);
	}
	/* program temporary area */
	fl_ret = flash_program_page(NULL,BOOT_LOADER_UPDATE_TEMPORARY_AREA_LOW_ADDRESS,hyper,image_size + BOOT_LOADER_USER_FIRMWARE_HEADER_LENGTH);	

	if(fl_ret == -1)
	{
		printf("flash_program_page() returns error.\r\n");
	}

	memset(&hyper[0], 0x00, image_size + BOOT_LOADER_USER_FIRMWARE_HEADER_LENGTH);
	software_reset();

	while(1);	/* software reset */
	
    /* We shouldn't actually get here if the board supports the auto reset.
     * But, it doesn't hurt anything if we do although someone will need to
     * reset the device for the new image to boot. */
    return kOTA_Err_None;
}

OTA_Err_t prvPAL_ActivateNewImage( void )
{
    DEFINE_OTA_METHOD_NAME("prvPAL_ActivateNewImage");

    OTA_LOG_L1( "[%s] Changing the Startup Bank\r\n", OTA_METHOD_NAME );
 
    /* reset for self testing */
	vTaskDelay(5000);
	prvPAL_ResetDevice();	/* no return from this function */

    return kOTA_Err_None;
}

OTA_Err_t prvPAL_SetPlatformImageState( OTA_ImageState_t eState )
{
    DEFINE_OTA_METHOD_NAME( "prvPAL_SetPlatformImageState" );
    OTA_LOG_L1("[%s] is called.\r\n", OTA_METHOD_NAME);

    OTA_Err_t eResult = kOTA_Err_Uninitialized;

	/* Save the image state to eSavedAgentState. */
	if (eOTA_ImageState_Testing == load_firmware_control_block.eSavedAgentState)
	{
		switch (eState)
		{
			case eOTA_ImageState_Accepted:
				eResult = kOTA_Err_None;
				break;
			case eOTA_ImageState_Rejected:
				OTA_LOG_L1( "[%s] Rejected image.\r\n", OTA_METHOD_NAME );
				eResult = kOTA_Err_None;
				break;
			case eOTA_ImageState_Aborted:
				OTA_LOG_L1( "[%s] Aborted image.\r\n", OTA_METHOD_NAME );
				eResult = kOTA_Err_None;
				break;
			case eOTA_ImageState_Testing:
				OTA_LOG_L1( "[%s] Testing.\r\n", OTA_METHOD_NAME );
				eResult = kOTA_Err_None;
				break;
			default:
				OTA_LOG_L1( "[%s] Unknown state received %d.\r\n", OTA_METHOD_NAME, ( int32_t ) eState );
		        eResult = kOTA_Err_BadImageState;
				break;
		}
	}
	else
	{
		switch (eState)
		{
			case eOTA_ImageState_Accepted:
				OTA_LOG_L1( "[%s] Not in commit pending so can not mark image valid (%d).\r\n", OTA_METHOD_NAME);
				eResult = kOTA_Err_CommitFailed;
				break;
			case eOTA_ImageState_Rejected:
				OTA_LOG_L1( "[%s] Rejected image.\r\n", OTA_METHOD_NAME );
				eResult = kOTA_Err_None;
				break;
			case eOTA_ImageState_Aborted:
				OTA_LOG_L1( "[%s] Aborted image.\r\n", OTA_METHOD_NAME );
				eResult = kOTA_Err_None;
				break;
			case eOTA_ImageState_Testing:
				OTA_LOG_L1( "[%s] Testing.\r\n", OTA_METHOD_NAME );
				eResult = kOTA_Err_None;
				break;
			default:
				OTA_LOG_L1( "[%s] Unknown state received %d.\r\n", OTA_METHOD_NAME, ( int32_t ) eState );
		        eResult = kOTA_Err_BadImageState;
				break;
		}
	}

	load_firmware_control_block.eSavedAgentState = eState;

    return eResult;
}

OTA_PAL_ImageState_t prvPAL_GetPlatformImageState( void )
{
    DEFINE_OTA_METHOD_NAME( "prvPAL_GetPlatformImageState" );
    OTA_LOG_L1("[%s] is called.\r\n", OTA_METHOD_NAME);

	OTA_PAL_ImageState_t ePalState = eOTA_PAL_ImageState_Unknown;

	switch (load_firmware_control_block.eSavedAgentState)
	{
		case eOTA_ImageState_Testing:
			ePalState = eOTA_PAL_ImageState_PendingCommit;
			break;
		case eOTA_ImageState_Accepted:
			ePalState = eOTA_PAL_ImageState_Valid;
			break;
		case eOTA_ImageState_Unknown: // Uninitialized image state, assume a factory image
			ePalState = eOTA_PAL_ImageState_Valid;
			break;
		case eOTA_ImageState_Rejected:
		case eOTA_ImageState_Aborted:
		default:
			ePalState = eOTA_PAL_ImageState_Invalid;
			break;
	}

	OTA_LOG_L1("Function call: prvPAL_GetPlatformImageState: [%d]\r\n", ePalState);
    return ePalState; /*lint !e64 !e480 !e481 I/O calls and return type are used per design. */
}
