==> renesas/amazon-freertos/vendors/espressif/boards/esp32/ports/ota/aws_ota_pal.c <==
#include <stdio.h>
#include <stdint.h>
#include <string.h>
#include "aws_ota_agent.h"
#include "aws_ota_pal.h"
#include "aws_crypto.h"
#include "aws_pkcs11.h"
#include "esp_system.h"
#include "esp_log.h"
#include "soc/rtc_cntl_reg.h"
#include "aws_ota_codesigner_certificate.h"
#include "esp_partition.h"
#include "esp_spi_flash.h"
#include "esp_image_format.h"
#include "esp_ota_ops.h"
#include "aws_esp_ota_ops.h"
#include "mbedtls/asn1.h"
#include "mbedtls/bignum.h"
#include "mbedtls/base64.h"
#define kOTA_HalfSecondDelay    pdMS_TO_TICKS( 500UL )
#define ECDSA_INTEGER_LEN       32
#define ECDSA_SIG_SIZE          80

OTA_Err_t prvPAL_Abort( OTA_FileContext_t * const C )
{
    OTA_Err_t ota_ret = kOTA_Err_FileAbort;

    if( _esp_ota_ctx_validate( C ) )
    {
        _esp_ota_ctx_close( C );
        ota_ret = kOTA_Err_None;
    }
    else if( C && ( C->pucFile == NULL ) )
    {
        ota_ret = kOTA_Err_None;
    }

    return ota_ret;
}

OTA_Err_t prvPAL_CreateFileForRx( OTA_FileContext_t * const C )
{
    if( ( NULL == C ) || ( NULL == C->pucFilePath ) )
    {
        return kOTA_Err_RxFileCreateFailed;
    }

    const esp_partition_t * update_partition = aws_esp_ota_get_next_update_partition( NULL );

    if( update_partition == NULL )
    {
        ESP_LOGE( TAG, "failed to find update partition" );
        return kOTA_Err_RxFileCreateFailed;
    }

    ESP_LOGI( TAG, "Writing to partition subtype %d at offset 0x%x",
              update_partition->subtype, update_partition->address );

    esp_ota_handle_t update_handle;
    esp_err_t err = aws_esp_ota_begin( update_partition, OTA_SIZE_UNKNOWN, &update_handle );

    if( err != ESP_OK )
    {
        ESP_LOGE( TAG, "aws_esp_ota_begin failed (%d)", err );
        return kOTA_Err_RxFileCreateFailed;
    }

    ota_ctx.cur_ota = C;
    ota_ctx.update_partition = update_partition;
    ota_ctx.update_handle = update_handle;

    C->pucFile = ( uint8_t * ) &ota_ctx;
    ota_ctx.data_write_len = 0;
    ota_ctx.valid_image = false;

    ESP_LOGI( TAG, "aws_esp_ota_begin succeeded" );

    return kOTA_Err_None;
}

u8 * prvPAL_ReadAndAssumeCertificate( const u8 * const pucCertName,
                                      uint32_t * const ulSignerCertSize )
{
    uint8_t * pucCertData;
    uint32_t ulCertSize;
    uint8_t * pucSignerCert = NULL;
    CK_RV xResult;

    xResult = prvGetCertificate( ( const char * ) pucCertName, &pucSignerCert, ulSignerCertSize );

    if( ( xResult == CKR_OK ) && ( pucSignerCert != NULL ) )
    {
        ESP_LOGI( TAG, "Using cert with label: %s OK\r\n", ( const char * ) pucCertName );
    }
    else
    {
        ESP_LOGI( TAG, "No such certificate file: %s. Using aws_ota_codesigner_certificate.h.\r\n",
                  ( const char * ) pucCertName );

        /* Allocate memory for the signer certificate plus a terminating zero so we can copy it and return to the caller. */
        ulCertSize = sizeof( signingcredentialSIGNING_CERTIFICATE_PEM );
        pucSignerCert = pvPortMalloc( ulCertSize );                           /*lint !e9029 !e9079 !e838 malloc proto requires void*. */
        pucCertData = ( uint8_t * ) signingcredentialSIGNING_CERTIFICATE_PEM; /*lint !e9005 we don't modify the cert but it could be set by PKCS11 so it's not const. */

        ESP_LOGI( TAG, "Done allocating memory for cert.\r\n");

        if( pucSignerCert != NULL )
        {
            memcpy( pucSignerCert, pucCertData, ulCertSize );
            *ulSignerCertSize = ulCertSize;

            ESP_LOGI( TAG, "Done memcpy( pucSignerCert, pucCertData, ulCertSize )\r\n");
        }
        else
        {
            ESP_LOGE( TAG, "Error: No memory for certificate in prvPAL_ReadAndAssumeCertificate!\r\n" );
        }
    }

    ESP_LOGI( TAG, "Done Read certificate , going back\r\n");

    return pucSignerCert;
}

OTA_Err_t prvPAL_CheckFileSignature( OTA_FileContext_t * const C )
{
    OTA_Err_t result;
    uint32_t ulSignerCertSize;
    void * pvSigVerifyContext;
    u8 * pucSignerCert = 0;
    static spi_flash_mmap_memory_t ota_data_map;
    const void * buf = NULL;

    /* Verify an ECDSA-SHA256 signature. */
    if( CRYPTO_SignatureVerificationStart( &pvSigVerifyContext, cryptoASYMMETRIC_ALGORITHM_ECDSA,
                                           cryptoHASH_ALGORITHM_SHA256 ) == pdFALSE )
    {
        ESP_LOGE( TAG, "signature verification start failed" );
        return kOTA_Err_SignatureCheckFailed;
    }

    pucSignerCert = prvPAL_ReadAndAssumeCertificate( ( const u8 * const ) C->pucCertFilepath, &ulSignerCertSize );

    if( pucSignerCert == NULL )
    {
        ESP_LOGE( TAG, "cert read failed" );
        return kOTA_Err_BadSignerCert;
    }
    ESP_LOGI( TAG, "cert read success\n\r" );

    esp_err_t ret = esp_partition_mmap( ota_ctx.update_partition, 0, ota_ctx.data_write_len,
                                        SPI_FLASH_MMAP_DATA, &buf, &ota_data_map );

    if( ret != ESP_OK )
    {
        ESP_LOGE( TAG, "partition mmap failed %d", ret );
        result = kOTA_Err_SignatureCheckFailed;
        goto end;
    }

    ESP_LOGI( TAG, "partition map success\n\r" );

    CRYPTO_SignatureVerificationUpdate( pvSigVerifyContext, buf, ota_ctx.data_write_len );

    ESP_LOGI( TAG, "CRYPTO_SignatureVerificationUpdate success\n\r" );

    spi_flash_munmap( ota_data_map );

    ESP_LOGI( TAG, "ota data map\n\r" );

    if( CRYPTO_SignatureVerificationFinal( pvSigVerifyContext, ( char * ) pucSignerCert, ulSignerCertSize,
                                           C->pxSignature->ucData, C->pxSignature->usSize ) == pdFALSE )
    {
        ESP_LOGE( TAG, "signature verification failed" );
        result = kOTA_Err_SignatureCheckFailed;
    }
    else
    {
        ESP_LOGI( TAG, "signature verification success.\n\r" );
        result = kOTA_Err_None;
    }

end:

    /* Free the signer certificate that we now own after prvReadAndAssumeCertificate(). */
    if( pucSignerCert != NULL )
    {
        vPortFree( pucSignerCert );
        ESP_LOGI( TAG, " Free the signer certificate memory .\n\r" );
    }

    return result;
}

OTA_Err_t prvPAL_CloseFile( OTA_FileContext_t * const C )
{
    OTA_Err_t result = kOTA_Err_None;

    if( !_esp_ota_ctx_validate( C ) )
    {
        return kOTA_Err_FileClose;
    }

    if( C->pxSignature == NULL )
    {
        ESP_LOGE( TAG, "Image Signature not found" );
        _esp_ota_ctx_clear( &ota_ctx );
        result = kOTA_Err_SignatureCheckFailed;
    }
    else if( ota_ctx.data_write_len == 0 )
    {
        ESP_LOGE( TAG, "No data written to partition" );
        result = kOTA_Err_SignatureCheckFailed;
    }
    else
    {
        /* Verify the file signature, close the file and return the signature verification result. */
        result = prvPAL_CheckFileSignature( C );

        if( result != kOTA_Err_None )
        {
            esp_partition_erase_range( ota_ctx.update_partition, 0, ota_ctx.update_partition->size );
        }
        else
        {
            /* Write ASN1 decoded signature at the end of firmware image for bootloader to validate during bootup */
            esp_sec_boot_sig_t * sec_boot_sig = ( esp_sec_boot_sig_t * ) malloc( sizeof( esp_sec_boot_sig_t ) );

            if( sec_boot_sig != NULL )
            {
                memset( sec_boot_sig->sec_ver, 0x00, sizeof( sec_boot_sig->sec_ver ) );
                memset( sec_boot_sig->pad, 0xFF, sizeof( sec_boot_sig->pad ) );
                result = asn1_to_raw_ecdsa( C->pxSignature->ucData, C->pxSignature->usSize, sec_boot_sig->raw_ecdsa_sig );

                if( result == kOTA_Err_None )
                {
                    esp_err_t ret = aws_esp_ota_write( ota_ctx.update_handle, sec_boot_sig, ota_ctx.data_write_len, ECDSA_SIG_SIZE );

                    if( ret != ESP_OK )
                    {
                        return kOTA_Err_FileClose;
                    }

                    ota_ctx.data_write_len += ECDSA_SIG_SIZE;
                }

                free( sec_boot_sig );
                ota_ctx.valid_image = true;
            }
            else
            {
                result = kOTA_Err_SignatureCheckFailed;
            }
        }
    }

    return result;
}

OTA_Err_t IRAM_ATTR prvPAL_ResetDevice( void )
{
    /* Short delay for debug log output before reset. */
    vTaskDelay( kOTA_HalfSecondDelay );
    esp_restart();
    return kOTA_Err_None;
}

OTA_Err_t prvPAL_ActivateNewImage( void )
{
    if( ota_ctx.cur_ota != NULL )
    {
        if( aws_esp_ota_end( ota_ctx.update_handle ) != ESP_OK )
        {
            ESP_LOGE( TAG, "aws_esp_ota_end failed!" );
            esp_partition_erase_range( ota_ctx.update_partition, 0, ota_ctx.update_partition->size );
            prvPAL_ResetDevice();
        }

        esp_err_t err = aws_esp_ota_set_boot_partition( ota_ctx.update_partition );

        if( err != ESP_OK )
        {
            ESP_LOGE( TAG, "aws_esp_ota_set_boot_partition failed (%d)!", err );
            esp_partition_erase_range( ota_ctx.update_partition, 0, ota_ctx.update_partition->size );
            _esp_ota_ctx_clear( &ota_ctx );
        }

        prvPAL_ResetDevice();
    }

    _esp_ota_ctx_clear( &ota_ctx );
    prvPAL_ResetDevice();
    return kOTA_Err_None;
}

int16_t prvPAL_WriteBlock( OTA_FileContext_t * const C,
                           uint32_t iOffset,
                           uint8_t * const pacData,
                           uint32_t iBlockSize )
{
    if( _esp_ota_ctx_validate( C ) )
    {
        esp_err_t ret = aws_esp_ota_write( ota_ctx.update_handle, pacData, iOffset, iBlockSize );

        if( ret != ESP_OK )
        {
            ESP_LOGE( TAG, "Couldn't flash at the offset %d", iOffset );
            return -1;
        }

        ota_ctx.data_write_len += iBlockSize;
    }
    else
    {
        ESP_LOGI( TAG, "Invalid OTA Context" );
        return -1;
    }

    return iBlockSize;
}

OTA_PAL_ImageState_t prvPAL_GetPlatformImageState()
{
    OTA_PAL_ImageState_t eImageState = eOTA_PAL_ImageState_Unknown;
    uint32_t ota_flags;

    ESP_LOGI( TAG, "%s", __func__ );

    if( ( ota_ctx.cur_ota != NULL ) && ( ota_ctx.data_write_len != 0 ) )
    {
        /* Firmware update is complete or on-going, retrieve its status */
        ota_flags = ota_ctx.valid_image == true ? ESP_OTA_IMG_NEW : ESP_OTA_IMG_INVALID;
    }
    else
    {
        esp_err_t ret = aws_esp_ota_get_boot_flags( &ota_flags, true );

        if( ret != ESP_OK )
        {
            ESP_LOGE( TAG, "failed to get ota flags %d", ret );
            return eImageState;
        }
    }

    switch( ota_flags )
    {
        case ESP_OTA_IMG_PENDING_VERIFY:
            /* Pending Commit means we're in the Self Test phase. */
            eImageState = eOTA_PAL_ImageState_PendingCommit;
            break;

        case ESP_OTA_IMG_VALID:
        case ESP_OTA_IMG_NEW:
            eImageState = eOTA_PAL_ImageState_Valid;
            break;

        default:
            eImageState = eOTA_PAL_ImageState_Invalid;
            break;
    }

    return eImageState;
}

OTA_Err_t prvPAL_SetPlatformImageState( OTA_ImageState_t eState )
{
    OTA_Err_t eResult = kOTA_Err_None;
    int state;

    ESP_LOGI( TAG, "%s, %d", __func__, eState );

    switch( eState )
    {
        case eOTA_ImageState_Accepted:
            ESP_LOGI( TAG, "Set image as valid one!" );
            state = ESP_OTA_IMG_VALID;
            break;

        case eOTA_ImageState_Rejected:
            ESP_LOGW( TAG, "Set image as invalid!" );
            state = ESP_OTA_IMG_INVALID;
            break;

        case eOTA_ImageState_Aborted:
            ESP_LOGW( TAG, "Set image as aborted!" );
            state = ESP_OTA_IMG_ABORTED;
            break;

        case eOTA_ImageState_Testing:
            ESP_LOGW( TAG, "Set image as testing!" );
            return kOTA_Err_None;

        default:
            ESP_LOGW( TAG, "Set image invalid state!" );
            return kOTA_Err_BadImageState;
    }

    uint32_t ota_flags;
    /* Get current active (running) firmware image flags */
    esp_err_t ret = aws_esp_ota_get_boot_flags( &ota_flags, true );

    if( ret != ESP_OK )
    {
        ESP_LOGE( TAG, "failed to get ota flags %d", ret );
        return kOTA_Err_CommitFailed;
    }

    /* If this is first request to set platform state, post bootup and there is not OTA being
     * triggered yet, then operate on active image flags, else use passive image flags */
    if( ( ota_ctx.cur_ota == NULL ) && ( ota_ctx.data_write_len == 0 ) )
    {
        if( ota_flags == ESP_OTA_IMG_PENDING_VERIFY )
        {
            ret = aws_esp_ota_set_boot_flags( state, true );

            if( ret != ESP_OK )
            {
                ESP_LOGE( TAG, "failed to set ota flags %d", ret );
                return kOTA_Err_CommitFailed;
            }
            else
            {
                /* RTC watchdog timer can now be stopped */
                disable_rtc_wdt();
            }
        }
        else
        {
            ESP_LOGW( TAG, "Image not in self test mode %d", ota_flags );
            eResult = ota_flags == ESP_OTA_IMG_VALID ? kOTA_Err_None : kOTA_Err_CommitFailed;
        }

        /* For debug purpose only, get current flags */
        aws_esp_ota_get_boot_flags( &ota_flags, true );
    }
    else
    {
        if( ( eState == eOTA_ImageState_Accepted ) && ( ota_ctx.valid_image == false ) )
        {
            /* Incorrect update image or not yet validated */
            return kOTA_Err_CommitFailed;
        }

        if( ota_flags != ESP_OTA_IMG_VALID )
        {
            ESP_LOGE( TAG, "currently executing firmware not marked as valid, abort" );
            return kOTA_Err_CommitFailed;
        }

        ret = aws_esp_ota_set_boot_flags( state, false );

        if( ret != ESP_OK )
        {
            ESP_LOGE( TAG, "failed to set ota flags %d", ret );
            return kOTA_Err_CommitFailed;
        }
    }

    return eResult;
}
